--- a/my_countdown.css
+++ b/my_countdown.css
@@ -17,6 +17,29 @@ body { margin: 0; padding: 0; background-color: #092f6e; color: #fff; }
 
 #world-premiere .heading {
 	background-color: rgba(0,0,0,.5);
-	padding: 15px 0px, 2px, 0;
+	padding: 15px 0px 2px 0px;
 	margin: 0px 0px 30px 0px;
+}
+
+#world-premiere h1 {
+	font-size: 4.2em;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 300;
+	line-height: 70px;
+	margin: 0px 0px 0px -5px;
+	padding: 0;
+	text-align: center;
+}
+
+#world-premiere h2 {
+	font-size: 1.5em;
+	color: #6fb5f8;
+	text-transform: uppercase;
+	font-weight: 700;
+	line-height: 18px;
+	margin: 0;
+	padding: 0px;
+	text-align: center;
+	letter-spacing: 9px;
 }
